--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">RestaurantsForMe</string>
+    <string name="erreur">Check your Name &amp; Passwor</string>
+
     <string name="title_activity_maps">Map</string>
+    <string name="forgotpass">Forgot password</string>
+    <string name="saveUser">Save user</string>
+    <string name="btnLog">LOGIN</string>
+    <string name="password">Password</string>
+    <string name="nom">Name</string>
 </resources>
