--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RestaurantsForMe</string>
-    <string name="erreur">Check your Name &amp; Passwor</string>
+    <string name="erreur">Check your Name &amp; Password</string>
 
     <string name="title_activity_maps">Map</string>
     <string name="forgotpass">Forgot password</string>
