--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="btnLog">LOGIN</string>
     <string name="password">Password</string>
     <string name="nom">Name</string>
+    <string name="pizza">pizza</string>
 </resources>
