finishing the beta edition

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="pizza">pizza</string>
     <string name="categorie_des_restaurants">Catégories Des Restaurants</string>
     <string name="login">Login</string>
+    <string name="Liste_Restaurants">Liste des Restaurants</string>
 </resources>
